--- a/netflix-clone/package.json
+++ b/netflix-clone/package.json
@@ -12,12 +12,15 @@
     "@auth/prisma-adapter": "^1.0.9",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.1.0",
